--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 #menu{
 height: 50px;
+background-color: :#E8E8EE;
+display: inline-block;
 }
+
 
 h1{
 
@@ -24,40 +27,47 @@ color: #000;
     margin: 0.2em 0;
 }
 #panel {
-    top: 60px;
+    top: 80px;
     width: 26%;
     display: inline-block;
-    vertical-align: 400px;
+    vertical-align: top;
     text-align: center;
     line-height: 42px;
 }
 
 .range-slider {
-    width: 50%;
+    width: 70%;
+    top: 80px;
 }
 
 #sequencecontrol{
   margin: 0.2em 0;
+  top: 80px;
+  padding-top: 60px;
 
 }
 form{
   text-align:left;
+  margin: 0.2em 0;
 }
 
 #forward {
     float: right
-    
+
 }
 
-#forward img
+#forward img{
+  height: 20px;
+}
+
 
 
 #reverse {
     float: left;
+    top: 80px;
 
 }
 
-.img{
-  height: 20px;
-  width: 20px;
+#reverse img{
+  height:20px;
 }
