--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
+
+
 #menu{
 height: 50px;
-background-color: :#E8E8EE;
 display: inline-block;
 }
 
@@ -12,6 +13,7 @@ top: 0;
 left:20%;
 font-size: 30px;
 color: #000;
+font-family: arial;
 
 }
 
@@ -36,21 +38,49 @@ color: #000;
 }
 
 .range-slider {
-    width: 70%;
+    width: 100px;
     top: 80px;
 }
 
 #sequencecontrol{
-  margin: 0.2em 0;
   top: 80px;
   padding-top: 60px;
 
 }
 form{
   text-align:left;
-  margin: 0.2em 0;
+  margin: 0.1em 0;
+  margin-bottom: 1cm;
+  font-family: arial;
 }
 
+.legend-control-container{
+  height: 100px;
+  width: 50;
+  background-color: rgba(255,255,255,0.5);
+  line-height: 45px;
+  border: solid gray 1px;
+  text-align: center;
+  padding-bottom: 20px;
+
+}
+#temporal-legend{
+  font-family: arial;
+}
+
+.sequence-control-container {
+    width: 200px;
+    height: 30px;
+    background-color: rgba(255,255,255,0.5);
+    padding: 10px;
+    line-height: 45px;
+    text-align: center;
+    border: solid gray 1px;
+}
+
+.skip{
+  padding-top: 5px;
+}
 #forward {
     float: right
 
@@ -70,4 +100,5 @@ form{
 
 #reverse img{
   height:20px;
+
 }
