--- a/css/style.css
+++ b/css/style.css
@@ -20,17 +20,18 @@ font-family: arial;
 #map {
     top: 50px;
     height: 600px;
-    width: 70%;
+    width: 85%;
     display:
     inline-block
 }
 
 .leaflet-popup-content p {
     margin: 0.2em 0;
+    font-family: arial;
 }
 #panel {
     top: 80px;
-    width: 26%;
+    width: 11%;
     display: inline-block;
     vertical-align: top;
     text-align: center;
@@ -69,10 +70,10 @@ form{
 }
 
 .sequence-control-container {
-    width: 200px;
+    width: 230px;
     height: 30px;
     background-color: rgba(255,255,255,0.5);
-    padding: 10px;
+    padding: 12px;
     line-height: 45px;
     text-align: center;
     border: solid gray 1px;
